# yt-watcher

./: .gitignore  Cargo.toml  build.rs  config.toml.example
src/: main.rs  server.rs  sync.rs
src/tw_api/: mod.rs  structs.rs
src/yt_api/: mod.rs  structs.rs
www/: README.md  index.html  index.js  package-lock.json  package.json  style.css  vite.config.ts
www/public/: manifest.json  worker.js
www/src/: App.vue  utils.ts
www/src/assets/: main.css
www/src/components/: ChannelProfile.vue  SideBar.vue  VideoComponent.vue
