[package]
name = "yt-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
fern = "0.6.2"
futures = "0.3.28"
icalendar = { version = "0.15.4", features = ["chrono-tz"] }
local-ip-address = "0.5.3"
log = "0.4.19"
lru = "0.11.0"
once_cell = "1.18.0"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
warp = { version = "0.3.5", features = ["tls", "compression"] }
